[gd_scene load_steps=3 format=3 uid="uid://bjinsht335m44"]

[ext_resource type="Texture2D" uid="uid://v2llqmykkv5f" path="res://Assets/Terrain/ladder.png" id="1_cq4ai"]
[ext_resource type="Script" uid="uid://ci8ai0tb888pj" path="res://ladder.gd" id="1_lqhsa"]

[node name="Ladder" type="Node2D"]
z_as_relative = false
script = ExtResource("1_lqhsa")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_cq4ai")

[node name="Top" type="Area2D" parent="."]
position = Vector2(-7, -133)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Top"]
position = Vector2(3, 69)
polygon = PackedVector2Array(-11, -62, -15, -85, 7, -91, 8, -69)

[node name="Bottom" type="Area2D" parent="."]
position = Vector2(7, 109)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bottom"]
position = Vector2(-2, -40)
polygon = PackedVector2Array(-7, 21, -5, 68, 14, 57, 12, 13)

[node name="Ladder" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ladder"]
position = Vector2(-2, 1)
polygon = PackedVector2Array(-5, 66, 14, 54, 8, -70, -11, -64)

[connection signal="area_entered" from="Top" to="." method="_on_top_area_entered"]
[connection signal="area_entered" from="Bottom" to="." method="_on_bottom_area_entered"]
[connection signal="area_entered" from="Ladder" to="." method="_on_ladder_area_entered"]
[connection signal="area_exited" from="Ladder" to="." method="_on_ladder_area_exited"]
[connection signal="input_event" from="Ladder" to="." method="_on_ladder_input_event"]
